# EVMaster

./: CMakeLists.txt  README.md  ev_master.mc3  ev_master.ncf  main.c  system.h  system_config.h
EvMaster.X/nbproject/: Makefile-default.mk  Makefile-genesis.properties  Makefile-impl.mk  Makefile-variables.mk  Package-default.bash  configurations.xml
include/: aoa_communication.h  lcd.h  usb_config.h  usb_message.h
nbproject/: configurations.xml  project.xml
src/: aoa_communication.c  main.c  usb_config.c
